--- a/src/components/Strength.css
+++ b/src/components/Strength.css
@@ -2,6 +2,7 @@
     background-color: #000000;
     padding: 4rem 2rem;
     text-align: center;
+    width: 100vw;
   }
   
   .strength-title {
@@ -30,13 +31,18 @@
     box-shadow: 0 6px 16px white;
     width: 30%;
     min-width: 280px;
-    height: 400px;
+    height: 470px;
     box-sizing: border-box;
     display: flex;
     align-items: center;
-    justify-content: center;
+   display: flex;
+   flex-direction: column;
     color: white;
   }
+
+ 
+
+ 
   
   .strength-card.bar {
     padding: 1rem;
