--- a/src/components/ExperienceBox.css
+++ b/src/components/ExperienceBox.css
@@ -1,13 +1,15 @@
 .exp-section {
   position: relative;
-  padding: 4rem 2rem;
+  padding: 2rem 1rem;
   text-align: center;
-  background-image: url(../assets/background/headerbackground.jpg);
+  background-image: url(../assets/background/heading.jpg);
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
   overflow: hidden;
   z-index: 1;
+  width: 100vw;
+  padding: 2rem;
 }
 
 /* Foggy white overlay */
@@ -17,14 +19,14 @@
   top: 0;
   left: 0;
   width: 100%;
-  height: 100%;
+  height: 110%;
   background: linear-gradient(
     to bottom,
     rgb(0, 0, 0) 0%,
     /* Dark at top */ rgba(255, 255, 255, 0.3) 80%,
     /* Light/foggy in middle */ rgb(0, 0, 0.03) 100% /* Dark at bottom */
   );
-  backdrop-filter: blur(8px);
+  backdrop-filter: blur(2px);
   z-index: 0;
 }
 
@@ -48,12 +50,12 @@
   flex-wrap: wrap;
   background-color: #f1f2f5;
   padding: 2rem;
-  border-radius: 10px;
+  border-radius: 7px;
 }
 
 .exp-box {
-  flex: 1 1 150px;
-  min-width: 120px;
+  flex: 1 1 100px;
+  min-width: 100px;
   padding: 1rem;
   border-right: 1px solid #ddd;
 }
